--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   font-weight: 400;
 
   color: rgba(255, 255, 255, 0i.87);
-  background-color: #FFF0AF;
+  background-color: #ffba72;
 
   font-synthesis: none;
   text-rendering: optimizeLegibilty;
